--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ language: java
 before_install:
   - export TERM=dumb
   - sudo apt-get install -qq libstdc++6:i386 lib32z1
+before_install:
+ - chmod +x gradlew
