--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ before_install:
   - export TERM=dumb
   - sudo apt-get install -qq libstdc++6:i386 lib32z1
   - chmod +x gradlew
+  - wget http://dl.google.com/android/android-sdk_r18-linux.tgz
+  - tar -zxf android-sdk_r18-linux.tgz
+  - export ANDROID_HOME=~/build/itamecodesnew/android-travis-ci-example/android-sdk-linux
+  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
