--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
 before_install:
   # Install base Android SDK
   - sudo apt-get update -qq
+  - chmod +x gradlew
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
   - wget http://dl.google.com/android/android-sdk_r22.3-linux.tgz
   - tar xzf android-sdk_r22.3-linux.tgz
